2009-04-02  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/brasero-disc-recorder/totem-disc-recorder.c:
	Change "Video (S)VCD" to simply "(S)VCD" for correctness in the
	Brasero plugin. (Closes: #577746)

2009-04-02  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.in:
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_get_navigation_iface), (bacon_video_widget_motion_notify),
	(bacon_video_widget_button_press),
	(bacon_video_widget_button_release), (bvw_handle_element_message),
	(bacon_video_widget_finalize), (bvw_do_navigation_command),
	(bacon_video_widget_dvd_event),
	(bacon_video_widget_set_show_cursor),
	(bvw_update_interface_implementations), (bacon_video_widget_new):
	Add support for new DVD navigation interfaces in gst-plugins-base,
	and bump the requirement to 0.10.22.1 to ensure they're available.

2009-04-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_init):
	Patch from Zachary Strudler <strudz@rpi.edu> to add
	tooltips to the playlist items (Closes: #352553)

2009-04-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/bacon-message-connection.c:
	* src/bacon-message-connection.h:
	* src/plugins/lirc/totem-lirc.c (totem_lirc_to_command):
	* src/totem-object.c (totem_remote_command_get_type),
	(totem_action_exit), (totem_action_remote):
	* src/totem-options.c (totem_options_process_for_server):
	* src/totem-options.h:
	* src/totem-private.h:
	* src/totem.c (totem_message_received_cb), (main):
	* src/totem.h: Remove use of bacon-message-connection and
	use libunique instead (Closes: #162822)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c (totem_options_process_for_server):
	* src/totem-options.h: Remove --print-playing, we
	have a D-Bus plugin to export that data now (Closes: #512232)

2009-04-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_file_changed):
	Only remove files when the location is about to be umounted,